--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2473,251 +2473,251 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - local_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - langfuse_logging_unit_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - caching_unit_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_proxy_unit_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_proxy_security_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_assistants_api_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_router_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - check_code_and_doc_quality:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - auth_ui_unit_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
+      # - local_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - langfuse_logging_unit_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - caching_unit_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_proxy_unit_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_proxy_security_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_assistants_api_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_router_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - check_code_and_doc_quality:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - auth_ui_unit_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
       - e2e_ui_testing:
           filters:
             branches:
               only:
                 - litellm-ci-sim
                 - /litellm_.*/
-      - build_and_test:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - e2e_openai_endpoints:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - proxy_logging_guardrails_model_info_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - proxy_multi_instance_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - proxy_store_model_in_db_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - proxy_build_from_pip_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - proxy_pass_through_endpoint_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - llm_translation_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - mcp_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - llm_responses_api_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_mapped_tests:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - batches_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - litellm_utils_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - pass_through_unit_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - image_gen_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - logging_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - upload-coverage:
-          requires:
-            - llm_translation_testing
-            - mcp_testing
-            - llm_responses_api_testing
-            - litellm_mapped_tests
-            - batches_testing
-            - litellm_utils_testing
-            - pass_through_unit_testing
-            - image_gen_testing
-            - logging_testing
-            - litellm_router_testing
-            - caching_unit_tests
-            - litellm_proxy_unit_testing
-            - litellm_proxy_security_tests
-            - langfuse_logging_unit_tests
-            - local_testing
-            - litellm_assistants_api_testing
-            - auth_ui_unit_tests
-      - db_migration_disable_update_check:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - installing_litellm_on_python:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - installing_litellm_on_python_3_13:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - helm_chart_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - load_testing:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - test_bad_database_url:
-          filters:
-            branches:
-              only:
-                - main
-                - /litellm_.*/
-      - publish_to_pypi:
-          requires:
-            - local_testing
-            - build_and_test
-            - e2e_openai_endpoints
-            - load_testing
-            - test_bad_database_url
-            - llm_translation_testing
-            - mcp_testing
-            - llm_responses_api_testing
-            - litellm_mapped_tests
-            - batches_testing
-            - litellm_utils_testing
-            - pass_through_unit_testing
-            - image_gen_testing
-            - logging_testing
-            - litellm_router_testing
-            - caching_unit_tests
-            - langfuse_logging_unit_tests
-            - litellm_assistants_api_testing
-            - auth_ui_unit_tests
-            - db_migration_disable_update_check
-            - e2e_ui_testing
-            - litellm_proxy_unit_testing
-            - litellm_proxy_security_tests
-            - installing_litellm_on_python
-            - installing_litellm_on_python_3_13
-            - proxy_logging_guardrails_model_info_tests
-            - proxy_multi_instance_tests
-            - proxy_store_model_in_db_tests
-            - proxy_build_from_pip_tests
-            - proxy_pass_through_endpoint_tests
-            - check_code_and_doc_quality
-          filters:
-            branches:
-              only:
-                - main
+      # - build_and_test:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - e2e_openai_endpoints:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - proxy_logging_guardrails_model_info_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - proxy_multi_instance_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - proxy_store_model_in_db_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - proxy_build_from_pip_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - proxy_pass_through_endpoint_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - llm_translation_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - mcp_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - llm_responses_api_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_mapped_tests:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - batches_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - litellm_utils_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - pass_through_unit_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - image_gen_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - logging_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - upload-coverage:
+      #     requires:
+      #       - llm_translation_testing
+      #       - mcp_testing
+      #       - llm_responses_api_testing
+      #       - litellm_mapped_tests
+      #       - batches_testing
+      #       - litellm_utils_testing
+      #       - pass_through_unit_testing
+      #       - image_gen_testing
+      #       - logging_testing
+      #       - litellm_router_testing
+      #       - caching_unit_tests
+      #       - litellm_proxy_unit_testing
+      #       - litellm_proxy_security_tests
+      #       - langfuse_logging_unit_tests
+      #       - local_testing
+      #       - litellm_assistants_api_testing
+      #       - auth_ui_unit_tests
+      # - db_migration_disable_update_check:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - installing_litellm_on_python:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - installing_litellm_on_python_3_13:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - helm_chart_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - load_testing:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - test_bad_database_url:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
+      #           - /litellm_.*/
+      # - publish_to_pypi:
+      #     requires:
+      #       - local_testing
+      #       - build_and_test
+      #       - e2e_openai_endpoints
+      #       - load_testing
+      #       - test_bad_database_url
+      #       - llm_translation_testing
+      #       - mcp_testing
+      #       - llm_responses_api_testing
+      #       - litellm_mapped_tests
+      #       - batches_testing
+      #       - litellm_utils_testing
+      #       - pass_through_unit_testing
+      #       - image_gen_testing
+      #       - logging_testing
+      #       - litellm_router_testing
+      #       - caching_unit_tests
+      #       - langfuse_logging_unit_tests
+      #       - litellm_assistants_api_testing
+      #       - auth_ui_unit_tests
+      #       - db_migration_disable_update_check
+      #       - e2e_ui_testing
+      #       - litellm_proxy_unit_testing
+      #       - litellm_proxy_security_tests
+      #       - installing_litellm_on_python
+      #       - installing_litellm_on_python_3_13
+      #       - proxy_logging_guardrails_model_info_tests
+      #       - proxy_multi_instance_tests
+      #       - proxy_store_model_in_db_tests
+      #       - proxy_build_from_pip_tests
+      #       - proxy_pass_through_endpoint_tests
+      #       - check_code_and_doc_quality
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
